[tool.poetry]
name = "markdown-convert"
version = "0.1.0"
description = ""
authors = ["Tiago Rodrigues <tiagopbr.2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.115.12"
markitdown = {extras = ["all"], version = "^0.1.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
